# MessageBlend

./: CMakeLists.txt  README.md
src/: msgblend.c  msgblend.h  xcobs.c  xcobs.h
test/: linux_pty.c
